# tensorflow_keras

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebook/chapter3/: 3_6_3.ipynb  list3_13.ipynb
notebook/chapter4/: common.py  custom_training.py  functional_api.ipynb  functional_api_gradienttape copy.ipynb  sequential_api.ipynb  sequential_api_gradienttape.ipynb  sequential_api_test.ipynb  subclassmodel_api.ipynb  subclassmodel_api_gradienttape.ipynb
notebook/chapter5/: cifar10.ipynb  cifar10_functional.ipynb  cifar10_sequential.ipynb  cifar10_sequential_train_step.ipynb  cifar10_subclasss.ipynb  common.py
notebook/chapter6/: imagenet.ipynb
notebook/chapter7/: imagedatagenerator.ipynb  keras.ipynb
