[tool.poetry]
name = "tensorflow_keras"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"
ipykernel = "^6.2.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"
pydot = "^1.4.2"
graphviz = "^0.17"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
